@@ -2,6 +2,16 @@
 # May include a comma-delimited list to start more than 1 admin server
 PORT=27777
 
+# REQUESTTIMEOUTMINS
+# The maximum amount of time the web server will give to complete
+# a web request.  This is in minutes.
+REQUESTTIMEOUTMINS=45
+
+# MAXTHREADS
+# The maximum number of web requests that your server will handle
+# at one time.
+MAXTHREADS=10
+
 #optional
 # defaults to all IP addresses (multi-homed machine)
 # BIND=127.0.0.1	
