@@ -1,4 +1,3 @@
-
 #-----------------------------------------------------
 # this .ini file is loaded by all web servers -
 #  a property that is defined in their server.ini
